workloads/must-gather.local.2378005887078000116/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-07d359641e4827bc34e31a5cefaf986acf4e78064fef531124cac0ed6da3e94c/cluster-scoped-resources/config.openshift.io/ingresses.yaml
---
apiVersion: config.openshift.io/v1
items:
- apiVersion: config.openshift.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2023-01-09T04:36:35Z"
    generation: 1
    managedFields:
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:componentRoutes:
            k:{"name":"oauth-openshift","namespace":"openshift-authentication"}:
              .: {}
              f:conditions:
                k:{"type":"Degraded"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
                k:{"type":"Progressing"}:
                  .: {}
                  f:lastTransitionTime: {}
                  f:message: {}
                  f:reason: {}
                  f:status: {}
                  f:type: {}
              f:consumingUsers: {}
              f:currentHostnames: {}
              f:defaultHostname: {}
              f:name: {}
              f:namespace: {}
              f:relatedObjects: {}
      manager: AuthenticationCustomRouteController
      operation: Apply
      subresource: status
      time: "2023-01-09T04:48:58Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          .: {}
          f:domain: {}
          f:loadBalancer:
            .: {}
            f:platform:
              .: {}
              f:aws:
                .: {}
                f:type: {}
              f:type: {}
      manager: cluster-bootstrap
      operation: Update
      time: "2023-01-09T04:36:35Z"
    - apiVersion: config.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          .: {}
          f:defaultPlacement: {}
      manager: cluster-bootstrap
      operation: Update
      subresource: status
      time: "2023-01-09T04:36:35Z"
    name: cluster
    resourceVersion: "23602"
    uid: f9b1392a-195b-40dc-b32a-ac802a0812c0
  spec:
    domain: apps.sn-loggvls-jsm.qe.devcluster.openshift.com
    loadBalancer:
      platform:
        aws:
          type: Classic
        type: AWS
  status:
    componentRoutes:
    - conditions:
      - lastTransitionTime: "2023-01-09T04:48:58Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Progressing
      - lastTransitionTime: "2023-01-09T04:47:59Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Degraded
      consumingUsers:
      - system:serviceaccount:oauth-openshift:authentication-operator
      currentHostnames:
      - oauth-openshift.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
      defaultHostname: oauth-openshift.apps.sn-loggvls-jsm.qe.devcluster.openshift.com
      name: oauth-openshift
      namespace: openshift-authentication
      relatedObjects:
      - group: route.openshift.io
        name: oauth-openshift
        namespace: openshift-authentication
        resource: routes
    defaultPlacement: Workers
kind: IngressList
metadata:
  continue: ""
  resourceVersion: "268263"
